--- a/src/views/homepage.ejs
+++ b/src/views/homepage.ejs
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 </head>
 <body>
-<h1>Esta funcionando heroku</h1>
+<h1>Esta funcionando con heroku</h1>
 </body>
 
 </html>
